--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,12 +14,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 html {
     font-size: 62.5%;
     box-sizing: inherit;
-    scroll-behavior: smooth;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -30,6 +30,30 @@ html {
         --background-dark: #212529;
         --neon-blue: #00ffd1;
     }
+}
+
+.section {
+    /* padding: 15rem 3rem;
+    border-top: 1px solid #ddd; */
+
+    transition: transform 1s, opacity 1s;
+}
+
+.section--hidden {
+    opacity: 0;
+    transform: translateY(16rem);
+}
+
+.section--fade {
+    opacity: 0;
+}
+
+.nav {
+    transition: opacity 1s;
+}
+
+.nav--hidden {
+    opacity: 0;
 }
 
 /* body {
